--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "Frontend de Fandoms App",
+  "author": "Ana Inés Barraza",
+  "license": "MIT",
   "scripts": {
     "start": "vite",
     "build": "tsc -b && vite build",
